# vRod

./: .gitignore  Cargo.toml
.github/workflows/: build_and_test.yml
lib/hnsw/: Cargo.toml
lib/hnsw/src/: config.rs  entry_points.rs  error.rs  fixed_length_priority_queue.rs  graph_layers.rs  graph_layers_builder.rs  graph_links.rs  graph_links_bin.rs  hnsw.rs  id_tracker.rs  io_ops.rs  lib.rs  metrics.rs  scorer.rs  search_context.rs  types.rs  vector_storage.rs  visited_pool.rs
src/: error.rs  main.rs  types.rs
src/collection/: col.rs  error.rs  id_offset_storage.rs  mod.rs  storage.rs  types.rs
src/command/: builder.rs  error.rs  mod.rs  types.rs
src/command_builder/: builder.rs  error.rs  mod.rs
src/command_builder/commands/: command_types.rs  error.rs  mod.rs  types.rs
src/command_query_builder/: builder.rs  error.rs  mod.rs  parsing_ops.rs  types.rs
src/command_query_builder/commands/: bulk_insert.rs  command_types.rs  create_collection.rs  delete.rs  drop_collection.rs  error.rs  insert.rs  mod.rs  reindex.rs  truncate_wal.rs  update.rs
src/command_query_builder/queries/: dto.rs  error.rs  list_collections.rs  mod.rs  query_types.rs  search.rs  search_all.rs
src/components/: mod.rs
src/components/collection/: col.rs  error.rs  id_offset_storage.rs  index.rs  mod.rs  storage.rs  types.rs
src/components/collection/index/: error.rs  mod.rs  tree.rs  types.rs
src/components/wal/: error.rs  log_file.rs  mod.rs
src/cq/: builder.rs  error.rs  executor.rs  mod.rs  parsing_ops.rs  types.rs  validator.rs
src/cq/commands/: bulk_insert.rs  create_collection.rs  delete.rs  drop_collection.rs  error.rs  insert.rs  mod.rs  reindex.rs  truncate_wal.rs  update.rs
src/cq/queries/: dto.rs  error.rs  list_collections.rs  mod.rs  query_types.rs  search.rs  search_all.rs  search_similar.rs
src/database/: config.rs  database.rs  db.rs  db_config.rs  error.rs  file_ops.rs  mod.rs  setup.rs  types.rs
src/utils/: common.rs  embeddings.rs  error.rs  mod.rs
src/wal/: error.rs  log_file.rs  mod.rs  types.rs
src/wal/utils/: mod.rs
(+5 files in other folders)
