[package]
name = "vrod"
version = "0.1.0"
edition = "2021"
authors = ["sekulas"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
fastembed = "3.4.0"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
