[package]
name = "vrod"
version = "0.1.0"
edition = "2021"
authors = ["sekulas"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
assert_cmd = "2.0.16"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
fastembed = "3.4.0"
predicates = "3.1.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tempfile = "3.10.1"
thiserror = "1.0.58"
