[package]
name = "vrod"
version = "0.1.0"
edition = "2021"
authors = ["sekulas"]

[dependencies]
anyhow = "1.0.82"
assert_cmd = "2.0.16"
bincode = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
fastembed = "3.4.0"
predicates = "3.1.2"
serde = { workspace = true }
serde_json = "1.0.116"
tempfile = "3.10.1"
thiserror = { workspace = true }
atomic_refcell = { workspace = true }

hnsw = { path = "lib/hnsw" }

[features]
load_tests = []

[workspace]
members = ["lib/hnsw"]

[workspace.dependencies]
bincode = "1.3.3"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
atomic_refcell = "0.1.13"
