[package]
name = "hnsw"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_refcell = { workspace = true }
bincode = { workspace = true }
bitvec = "1.0.1"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
ordered-float = "4.3.0"
parking_lot = "0.12.3"
rand = "0.8.5"
rayon = "1.10.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.129"
thiserror = { workspace = true }
validator = { version = "0.18.1", features = ["derive"] }
